@@ -85,13 +85,6 @@
 #define curve25519_eh_to_x _nettle_curve25519_eh_to_x
 #define curve448_eh_to_x _nettle_curve448_eh_to_x
 
-inline int
-is_zero_limb (mp_limb_t x)
-{
-  x |= (x << 1);
-  return ((x >> 1) - 1) >> (GMP_LIMB_BITS - 1);
-}
-
 extern const struct ecc_curve _nettle_secp_192r1;
 extern const struct ecc_curve _nettle_secp_224r1;
 extern const struct ecc_curve _nettle_secp_256r1;
